<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jojo0.myrestaurants.MainActivity">
    <item
        android:id="@+id/action_supprimer"
        android:orderInCategory="100"
        android:title="@string/action_supprimer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_modifier"
        android:orderInCategory="100"
        android:title="@string/action_modifier"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_commenter"
        android:orderInCategory="100"
        android:title="@string/action_commenter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_envoyerSMS"
        android:orderInCategory="100"
        android:title="@string/action_envoyerSMS"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ajoutContact"
        android:orderInCategory="100"
        android:title="@string/action_ajoutContact"
        app:showAsAction="never" />
</menu>